--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
     "babel-loader": "^10.0.0",
+    "copy-webpack-plugin": "^13.0.0",
     "webpack": "^5.99.6",
     "webpack-cli": "^6.0.1"
   }
